<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativelayout_for_fragment"
        android:background="@drawable/bgapp">


        <RelativeLayout
            android:id="@+id/relativebox00"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:focusableInTouchMode="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/datahora"
                    android:textColor="#000000"
                    android:textSize="75dp"
                    android:text="14:20 |"
                    android:layout_marginLeft="20dp"
                    />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/topdia"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/datahora">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/topdiatexto"
                    android:textColor="#000000"
                    android:textSize="60dp"
                    android:text="22"
                    android:layout_centerInParent="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/topdiatexto"
                    android:id="@+id/topmestexto"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:text="OUTRUBRO - QUINTA"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="78dp"
                android:layout_alignParentRight="true"
                android:layout_width="578dp"
                android:layout_height="wrap_content"
                android:id="@+id/equipamento">

                <RelativeLayout
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/iconetexto"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="9dp">
                </RelativeLayout>

                <TextView
                    android:layout_toRightOf="@+id/iconetexto"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:id="@+id/nomeequipamento"
                    android:textColor="#FFFFFF"
                    android:textSize="23dp"
                    android:text="@string/EQUIPAMENTO"
                    />

                <TextView
                    android:layout_toRightOf="@+id/nomeequipamento"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:id="@+id/nomeequipamentotexto"
                    android:textColor="#FFFFFF"
                    android:textSize="23dp"
                    android:text="548745687457"
                    />

                <RelativeLayout
                    android:id="@+id/relativeboxbandeira"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:focusableInTouchMode="true">

                    <ImageView
                        android:id="@+id/btbrasil"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/bt_america"
                        android:src="@drawable/icbd01" />

                    <ImageView
                        android:id="@+id/bt_america"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/bt_espanha"
                        android:src="@drawable/icbd02" />

                    <ImageView
                        android:id="@+id/bt_espanha"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/icbd03" />

                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>


            <RelativeLayout
                android:id="@+id/tela01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativebox00"
                android:layout_centerInParent="true">


                <RelativeLayout
                    android:id="@+id/relativebox02"
                    android:layout_width="400dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="70dp"
                    >

                    <ImageView
                        android:layout_width="282dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/logopagina"
                        android:src="@drawable/logobranco"
                        android:layout_centerInParent="true"
                        />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_marginTop="35dp"
                    android:id="@+id/relativebox03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/relativebox02"
                    >

                    <!--1 e 2 menu inicio -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu01e02">

                        <RelativeLayout
                            android:background="@drawable/roundcornerblue"
                            android:id="@+id/menu01"
                            android:layout_width="270dp"
                            android:layout_height="172dp">

                            <ImageView
                                android:layout_width="81dp"
                                android:layout_height="81dp"
                                android:id="@+id/imagemenu1"
                                android:src="@drawable/ic01"
                                android:layout_marginTop="10dp"
                                android:layout_centerInParent="true"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_below="@+id/imagemenu1"
                                android:text="@string/LIGAR_PARA_CENTRAL"
                                android:textColor="#FFF"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="14dp"
                                android:layout_centerInParent="true"
                                android:id="@+id/textmenu1"
                                />
                        </RelativeLayout>


                        <RelativeLayout
                            android:background="@drawable/roundcornergreen"
                            android:id="@+id/menu02"
                            android:layout_width="270dp"
                            android:layout_height="172dp"
                            android:layout_marginLeft="31dp"
                            android:layout_toRightOf="@+id/menu01">

                        <ImageView
                            android:layout_width="81dp"
                            android:layout_height="81dp"
                            android:layout_marginTop="10dp"
                            android:id="@+id/imagemenu2"
                            android:src="@drawable/ic02"
                            android:layout_centerInParent="true"
                            />

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_below="@+id/imagemenu2"
                                android:text="@string/AGENDA"
                                android:textColor="#FFF"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="14dp"
                                android:layout_centerInParent="true"
                                android:id="@+id/textmenu2"
                                />

                        </RelativeLayout>

                    </RelativeLayout>
                    <!--1 e 2 menu fim -->


                    <!--3 e 4 menu inicio -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/menu01e02"
                        android:layout_marginTop="30dp">

                        <RelativeLayout
                            android:background="@drawable/roundcornerpurple"
                            android:id="@+id/menu03"
                            android:layout_width="270dp"
                            android:layout_height="172dp">

                            <ImageView
                                android:layout_width="81dp"
                                android:layout_height="81dp"
                                android:id="@+id/imagemenu3"
                                android:src="@drawable/ic03"
                                android:layout_marginTop="10dp"
                                android:layout_centerInParent="true"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_below="@+id/imagemenu3"
                                android:text="@string/RELOGIO"
                                android:id="@+id/textmenu3"
                                android:textColor="#FFF"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="14dp"
                                android:layout_centerInParent="true"
                                />
                        </RelativeLayout>


                        <RelativeLayout
                            android:background="@drawable/roundcorneryellow"
                            android:id="@+id/menu04"
                            android:layout_width="270dp"
                            android:layout_height="172dp"
                            android:layout_marginLeft="31dp"
                            android:layout_toRightOf="@+id/menu03">

                            <ImageView
                                android:layout_width="81dp"
                                android:layout_height="81dp"
                                android:layout_marginTop="10dp"
                                android:id="@+id/imagemenu4"
                                android:src="@drawable/ic04"
                                android:layout_centerInParent="true"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_below="@+id/imagemenu4"
                                android:text="@string/ALERTAS"
                                android:id="@+id/textmenu4"
                                android:textColor="#FFF"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:textSize="14dp"
                                android:layout_centerInParent="true"
                                />

                        </RelativeLayout>

                    </RelativeLayout>
                    <!--3 e 4 menu fim -->



                    </RelativeLayout>



                </RelativeLayout>

    </RelativeLayout>



    <!--TELA DE LOG INICIO -->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/telalog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">


        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="2dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:lineSpacingExtra="1dp"
            />

        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="2dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoip"
            android:layout_below="@+id/info"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:lineSpacingExtra="1dp"
            android:text="..."
            />

        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="2dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msg"
            android:layout_below="@+id/infoip"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:lineSpacingExtra="1dp"
            android:text=""
            />


        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="2dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMessages"
            android:layout_below="@+id/msg"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:lineSpacingExtra="1dp"
            android:text="Log"
            />


    </RelativeLayout>

    <!-- TELA DE LOG FIM -->

    <!--TELA DE RELOGIO -->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/telarelogio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datahora2"
                android:textColor="#FFF"
                android:textSize="160dp"
                android:text="14:20"
                android:layout_centerHorizontal="true"
                />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/topdia2"
                android:layout_below="@+id/datahora2"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/topdiatexto2"
                    android:textColor="#FFFFFF"
                    android:textSize="120dp"
                    android:text="22"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/topdiatexto2"
                    android:id="@+id/topmestexto2"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:text="OUTRUBRO - QUINTA"
                    />
            </RelativeLayout>





    </RelativeLayout>
    <!--TELA DE RELOGIO -->


</android.support.constraint.ConstraintLayout>